--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,36 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
+<ion-header class="bg-header">
+  <ion-toolbar class="bg-header">
+    <ion-title class="ion-text-center">
+      Contatos
     </ion-title>
   </ion-toolbar>
+  <ion-searchbar [(ngModel)]="search" (ionChange)="ionInput(search)" placeholder="Buscar..." ></ion-searchbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-list>
+    <ion-item-sliding *ngFor="let contato of databaseService.contatos">
+      <ion-item>
+        <ion-avatar slot="start">
+          <img *ngIf="contato.photo!='null'" [src]="display(contato.photo)" />
+          <img *ngIf="contato.photo=='null'" src="../../assets/profile.png">
+        </ion-avatar>
+        <ion-label>
+          <h2>{{contato.name}}</h2>
+          <h3>{{contato.phone}}</h3>
+        </ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option class="bg-red" (click)="databaseService.deleteRow(contato)">Deletar</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+ 
+    <ion-item *ngIf="!(databaseService.contatos.length > 0)">
+      <ion-label>
+        <h2>Nenhum usuario encontrado </h2>
+      </ion-label>
+    </ion-item>
+
+    
+  </ion-list>
+</ion-content>
