--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,15 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+ 
+  
+  .bg-header {
+    background-color: #003152 !important;
+    --background: #003152;
+    color: white;
+  }
+
+  
+  
