Incluída validação de numero minimo no cadastro do telefone
Incluída validação de numero minimo no cadastro do telefone

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -24,7 +24,7 @@
     <ion-row>
       <ion-col text-center>
         <ion-button (click)="saveContato()"
-          [disabled]="name == null || name == '' ||phone == null || phone == '' "
+          [disabled]="name == null || name == '' ||phone == null || phone == '' || !(phone.length > 13) " 
           color="success" expand="block">
           Cadastrar
           <ion-icon slot="end" name="checkmark"></ion-icon>
